@@ -324,9 +324,9 @@ public class Home extends WebPage
 	}
 
 	/** Relevant locales wrapped in a list. */
-	private static final List<Locale> LOCALES = Arrays.asList(Locale.ENGLISH, new Locale("nl"),
-		Locale.GERMAN, Locale.SIMPLIFIED_CHINESE, Locale.JAPANESE, new Locale("pt", "BR"),
-		new Locale("fa", "IR"), new Locale("da", "DK"));
+	private static final List<Locale> LOCALES = Arrays.asList(Locale.ENGLISH, Locale.of("nl"),
+		Locale.GERMAN, Locale.SIMPLIFIED_CHINESE, Locale.JAPANESE, Locale.of("pt", "BR"),
+		Locale.of("fa", "IR"), Locale.of("da", "DK"));
 
 	/** available sites for the multiple select. */
 	private static final List<String> SITES = Arrays.asList("The Server Side", "Java Lobby",
@@ -342,7 +342,6 @@ public class Home extends WebPage
 	 */
 	public Home()
 	{
-
 		add(new Link<Void>("link")
 		{
 			private static final long serialVersionUID = 1L;
@@ -356,7 +355,7 @@ public class Home extends WebPage
 			}
 		});
 
-		add(new Label("selectedLabel", new PropertyModel<Contact>(this, "selectedContactLabel")));
+		add(new Label("selectedLabel", this::getSelectedContactLabel));
 
 		add(new DataView<Contact>("simple", new ContactDataProvider())
 		{
