@@ -41,23 +41,24 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 
-import javax.servlet.AsyncContext;
-import javax.servlet.DispatcherType;
-import javax.servlet.ReadListener;
-import javax.servlet.RequestDispatcher;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.ServletInputStream;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
-import javax.servlet.http.HttpUpgradeHandler;
-import javax.servlet.http.Part;
+import jakarta.servlet.AsyncContext;
+import jakarta.servlet.DispatcherType;
+import jakarta.servlet.ReadListener;
+import jakarta.servlet.RequestDispatcher;
+import jakarta.servlet.ServletConnection;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletInputStream;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpSession;
+import jakarta.servlet.http.HttpUpgradeHandler;
+import jakarta.servlet.http.Part;
 
-import org.apache.commons.fileupload.FileUploadBase;
+import org.apache.commons.fileupload2.core.AbstractFileUpload;
 import org.apache.wicket.Application;
 import org.apache.wicket.WicketRuntimeException;
 import org.apache.wicket.mock.MockRequestParameters;
@@ -75,14 +76,14 @@ import org.apache.wicket.util.value.ValueMap;
 /**
  * Mock servlet request. Implements all of the methods from the standard HttpServletRequest class
  * plus helper methods to aid setting up a request.
- * 
+ *
  * @author Chris Turner
  */
 public class MockHttpServletRequest implements HttpServletRequest
 {
 	/**
 	 * A holder class for an uploaded file.
-	 * 
+	 *
 	 * @author Frank Bille (billen)
 	 */
 	private static class UploadedFile
@@ -92,7 +93,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 		/**
 		 * Construct.
-		 * 
+		 *
 		 * @param fieldName
 		 * @param file
 		 * @param contentType
@@ -161,7 +162,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * Create the request using the supplied session object. Note that in order for temporary
 	 * sessions to work, the supplied session must be an instance of {@link MockHttpSession}
-	 * 
+	 *
 	 * @param application
 	 *            The application that this request is for
 	 * @param session
@@ -169,7 +170,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	 * @param context
 	 *            The current servlet context
 	 * @param locale
-	 *            The current locale 			  
+	 *            The current locale
 	 */
 	public MockHttpServletRequest(final Application application, final HttpSession session,
 		final ServletContext context, Locale locale)
@@ -178,16 +179,16 @@ public class MockHttpServletRequest implements HttpServletRequest
 		this.context = context;
 		initialize(locale);
 	}
-	
+
 	public MockHttpServletRequest(final Application application, final HttpSession session,
-			final ServletContext context) 
+			final ServletContext context)
 	{
 		this(application, session, context, Locale.getDefault());
 	}
 
 	/**
 	 * Add a new cookie.
-	 * 
+	 *
 	 * @param cookie
 	 *            The cookie
 	 */
@@ -210,7 +211,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * Add an uploaded file to the request. Use this to simulate a file that has been uploaded to a
 	 * field.
-	 * 
+	 *
 	 * @param fieldName
 	 *            The fieldname of the upload field.
 	 * @param file
@@ -255,7 +256,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Add a header to the request.
-	 * 
+	 *
 	 * @param name
 	 *            The name of the header to add
 	 * @param value
@@ -275,7 +276,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Sets a header to the request. Overrides any previous value of this header.
-	 * 
+	 *
 	 * @param name
 	 *            The name of the header to add
 	 * @param value
@@ -308,7 +309,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get an attribute.
-	 * 
+	 *
 	 * @param name
 	 *            The attribute name
 	 * @return The value, or null
@@ -321,7 +322,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the names of all of the values.
-	 * 
+	 *
 	 * @return The names
 	 */
 	@Override
@@ -334,7 +335,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the auth type.
-	 * 
+	 *
 	 * @return The auth type
 	 */
 	@Override
@@ -345,7 +346,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the current character encoding.
-	 * 
+	 *
 	 * @return The character encoding
 	 */
 	@Override
@@ -356,7 +357,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the current character set.
-	 * 
+	 *
 	 * @return The character set
 	 */
 	public Charset getCharset()
@@ -366,7 +367,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * true will force Request generate multiPart ContentType and ContentLength
-	 * 
+	 *
 	 * @param useMultiPartContentType
 	 */
 	public void setUseMultiPartContentType(boolean useMultiPartContentType)
@@ -378,7 +379,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * Return the length of the content. This is always -1 except if useMultiPartContentType set as
 	 * true. Then the length will be the length of the generated request.
-	 * 
+	 *
 	 * @return -1 if useMultiPartContentType is false. Else the length of the generated request.
 	 */
 	@Override
@@ -401,7 +402,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * If useMultiPartContentType set as true return the correct content-type.
-	 * 
+	 *
 	 * @return The correct multipart content-type if useMultiPartContentType is true. Else null.
 	 */
 	@Override
@@ -409,7 +410,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	{
 		if (useMultiPartContentType)
 		{
-			return FileUploadBase.MULTIPART_FORM_DATA + "; boundary=abcdefgABCDEFG";
+			return AbstractFileUpload.MULTIPART_FORM_DATA + "; boundary=abcdefgABCDEFG";
 		}
 
 		return null;
@@ -418,7 +419,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * Get the context path. For this mock implementation the name of the application is always
 	 * returned.
-	 * 
+	 *
 	 * @return The context path
 	 */
 	@Override
@@ -451,7 +452,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get all of the cookies for this request.
-	 * 
+	 *
 	 * @return The cookies
 	 */
 	@Override
@@ -468,7 +469,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the given header as a date.
-	 * 
+	 *
 	 * @param name
 	 *            The header name
 	 * @return The date, or -1 if header not found
@@ -498,7 +499,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the given header value.
-	 * 
+	 *
 	 * @param name
 	 *            The header name
 	 * @return The header value or null
@@ -520,7 +521,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the names of all of the headers.
-	 * 
+	 *
 	 * @return The header names
 	 */
 	@Override
@@ -531,7 +532,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get enumeration of all header values with the given name.
-	 * 
+	 *
 	 * @param name
 	 *            The name
 	 * @return The header values
@@ -551,7 +552,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * Returns an input stream if there has been added some uploaded files. Use
 	 * {@link #addFile(String, File, String)} to add some uploaded files.
-	 * 
+	 *
 	 * @return The input stream
 	 * @throws IOException
 	 *             If an I/O related problem occurs
@@ -598,7 +599,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the given header as an int.
-	 * 
+	 *
 	 * @param name
 	 *            The header name
 	 * @return The header value or -1 if header not found
@@ -619,7 +620,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * Get the locale of the request. Attempts to decode the Accept-Language header and if not found
 	 * returns the default locale of the JVM.
-	 * 
+	 *
 	 * @return The locale
 	 */
 	@Override
@@ -633,7 +634,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	}
 
 	/**
-	 * 
+	 *
 	 * @param value
 	 * @return locale
 	 */
@@ -649,17 +650,17 @@ public class MockHttpServletRequest implements HttpServletRequest
 		if (bits.length > 1)
 		{
 			final String country = bits[1].toUpperCase(Locale.ROOT);
-			return new Locale(language, country);
+			return Locale.of(language, country);
 		}
 		else
 		{
-			return new Locale(language);
+			return Locale.of(language);
 		}
 	}
 
 	/**
 	 * Return all the accepted locales. This implementation always returns just one.
-	 * 
+	 *
 	 * @return The locales
 	 */
 	@Override
@@ -694,7 +695,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the method.
-	 * 
+	 *
 	 * @return The method
 	 */
 	@Override
@@ -705,7 +706,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the request parameter with the given name.
-	 * 
+	 *
 	 * @param name
 	 *            The parameter name
 	 * @return The parameter value, or null
@@ -726,7 +727,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the map of all of the parameters.
-	 * 
+	 *
 	 * @return The parameters
 	 */
 	@Override
@@ -759,7 +760,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the names of all of the parameters.
-	 * 
+	 *
 	 * @return The parameter names
 	 */
 	@Override
@@ -770,7 +771,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the values for the given parameter.
-	 * 
+	 *
 	 * @param name
 	 *            The name of the parameter
 	 * @return The return values
@@ -798,7 +799,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the path info.
-	 * 
+	 *
 	 * @return The path info
 	 */
 	@Override
@@ -809,7 +810,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Always returns null.
-	 * 
+	 *
 	 * @return null
 	 */
 	@Override
@@ -820,7 +821,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the protocol.
-	 * 
+	 *
 	 * @return Always HTTP/1.1
 	 */
 	@Override
@@ -831,7 +832,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the query string part of the request.
-	 * 
+	 *
 	 * @return The query string
 	 */
 	@Override
@@ -876,7 +877,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * This feature is not implemented at this time as we are not supporting binary servlet input.
 	 * This functionality may be added in the future.
-	 * 
+	 *
 	 * @return The reader
 	 * @throws IOException
 	 *             If an I/O related problem occurs
@@ -885,21 +886,6 @@ public class MockHttpServletRequest implements HttpServletRequest
 	public BufferedReader getReader() throws IOException
 	{
 		return new BufferedReader(new InputStreamReader(getInputStream()));
-	}
-
-	/**
-	 * Deprecated method - should not be used.
-	 * 
-	 * @param name
-	 *            The name
-	 * @return The path
-	 * @deprecated Use ServletContext.getRealPath(String) instead.
-	 */
-	@Override
-	@Deprecated
-	public String getRealPath(String name)
-	{
-		return context.getRealPath(name);
 	}
 
 	/**
@@ -912,7 +898,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	}
 
 	/**
-	 * 
+	 *
 	 * @param addr
 	 *            Format: "aaa.bbb.ccc.ddd"
 	 */
@@ -923,7 +909,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the remote host.
-	 * 
+	 *
 	 * @return Return 'localhost' by default
 	 */
 	@Override
@@ -934,7 +920,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the name of the remote user from the REMOTE_USER header.
-	 * 
+	 *
 	 * @return The name of the remote user
 	 */
 	@Override
@@ -946,7 +932,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * Return a dummy dispatcher that just records that dispatch has occurred without actually doing
 	 * anything.
-	 * 
+	 *
 	 * @param name
 	 *            The name to dispatch to
 	 * @return The dispatcher
@@ -959,7 +945,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the requested session id. Always returns the id of the current session.
-	 * 
+	 *
 	 * @return The session id
 	 */
 	@Override
@@ -975,9 +961,9 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * Returns context path and servlet path concatenated, typically
 	 * /applicationClassName/applicationClassName
-	 * 
+	 *
 	 * @return The path value
-	 * @see javax.servlet.http.HttpServletRequest#getRequestURI()
+	 * @see jakarta.servlet.http.HttpServletRequest#getRequestURI()
 	 */
 	@Override
 	public String getRequestURI()
@@ -999,9 +985,9 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Try to build a rough URL.
-	 * 
+	 *
 	 * @return The url
-	 * @see javax.servlet.http.HttpServletRequest#getRequestURL()
+	 * @see jakarta.servlet.http.HttpServletRequest#getRequestURL()
 	 */
 	@Override
 	public StringBuffer getRequestURL()
@@ -1021,7 +1007,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the scheme.
-	 * 
+	 *
 	 * @return the scheme of this request
 	 */
 	@Override
@@ -1035,10 +1021,10 @@ public class MockHttpServletRequest implements HttpServletRequest
 	 * <p/>
 	 * set the <code>secure</code> flag accordingly (<code>true</code> for 'https',
 	 * <code>false</code> otherwise)
-	 * 
+	 *
 	 * @param scheme
 	 *            protocol scheme (e.g. https, http, ftp)
-	 * 
+	 *
 	 * @see #isSecure()
 	 */
 	public void setScheme(String scheme)
@@ -1049,7 +1035,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the server name.
-	 * 
+	 *
 	 * @return by default returns 'localhost'
 	 */
 	@Override
@@ -1060,7 +1046,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Set the server name.
-	 * 
+	 *
 	 * @param serverName
 	 *            content of 'Host' header
 	 */
@@ -1080,7 +1066,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Sets the server port for this request
-	 * 
+	 *
 	 * @param port
 	 */
 	public void setServerPort(int port)
@@ -1091,7 +1077,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * The servlet path may either be the application name or /. For test purposes we always return
 	 * the servlet name.
-	 * 
+	 *
 	 * @return The servlet path
 	 */
 	@Override
@@ -1102,7 +1088,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the sessions.
-	 * 
+	 *
 	 * @return The session
 	 */
 	@Override
@@ -1128,7 +1114,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the session.
-	 * 
+	 *
 	 * @param createNew
 	 *            Ignored, there is always a session
 	 * @return The session
@@ -1155,7 +1141,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Get the user principal.
-	 * 
+	 *
 	 * @return A user principal
 	 */
 	@Override
@@ -1190,7 +1176,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Reset the request back to a default state.
-	 * @param locale 
+	 * @param locale
 	 */
 	public void initialize(Locale locale)
 	{
@@ -1208,24 +1194,13 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Check whether session id is from a cookie. Always returns true.
-	 * 
+	 *
 	 * @return Always true
 	 */
 	@Override
 	public boolean isRequestedSessionIdFromCookie()
 	{
 		return true;
-	}
-
-	/**
-	 * Check whether session id is from a url rewrite. Always returns false.
-	 * 
-	 * @return Always false
-	 */
-	@Override
-	public boolean isRequestedSessionIdFromUrl()
-	{
-		return false;
 	}
 
 	@Override
@@ -1269,7 +1244,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Check whether session id is from a url rewrite. Always returns false.
-	 * 
+	 *
 	 * @return Always false
 	 */
 	@Override
@@ -1280,7 +1255,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Check whether the session id is valid.
-	 * 
+	 *
 	 * @return Always true
 	 */
 	@Override
@@ -1299,7 +1274,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	}
 
 	/**
-	 * 
+	 *
 	 * @param secure
 	 */
 	public void setSecure(boolean secure)
@@ -1309,7 +1284,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * NOT IMPLEMENTED.
-	 * 
+	 *
 	 * @param name
 	 *            The role name
 	 * @return Always false
@@ -1322,7 +1297,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Remove the given attribute.
-	 * 
+	 *
 	 * @param name
 	 *            The name of the attribute
 	 */
@@ -1334,7 +1309,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Set the given attribute.
-	 * 
+	 *
 	 * @param name
 	 *            The attribute name
 	 * @param o
@@ -1348,7 +1323,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Set the auth type.
-	 * 
+	 *
 	 * @param authType
 	 *            The auth type
 	 */
@@ -1359,7 +1334,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Set the character encoding.
-	 * 
+	 *
 	 * @param encoding
 	 *            The character encoding
 	 * @throws UnsupportedEncodingException
@@ -1373,7 +1348,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Set the cookies.
-	 * 
+	 *
 	 * @param theCookies
 	 *            The cookies
 	 */
@@ -1385,7 +1360,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Set the method.
-	 * 
+	 *
 	 * @param method
 	 *            The method
 	 */
@@ -1396,7 +1371,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Set a parameter.
-	 * 
+	 *
 	 * @param name
 	 *            The name
 	 * @param value
@@ -1440,7 +1415,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Sets a map of parameters.
-	 * 
+	 *
 	 * @param parameters
 	 *            the parameters to set
 	 */
@@ -1452,7 +1427,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 	/**
 	 * Set the path that this request is supposed to be serving. The path is relative to the web
 	 * application root and should start with a / character
-	 * 
+	 *
 	 * @param path
 	 */
 	public void setPath(final String path)
@@ -1462,7 +1437,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Set the complete url for this request. The url will be analyzed.
-	 * 
+	 *
 	 * @param url
 	 */
 	public void setURL(String url)
@@ -1472,7 +1447,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Helper method to create some default headers for the request
-	 * @param l 
+	 * @param l
 	 */
 	private void setDefaultHeaders(Locale l)
 	{
@@ -1498,7 +1473,7 @@ public class MockHttpServletRequest implements HttpServletRequest
 
 	/**
 	 * Build the request based on the uploaded files and the parameters.
-	 * 
+	 *
 	 * @return The request as a string.
 	 */
 	private byte[] buildRequest()
@@ -1769,6 +1744,21 @@ public class MockHttpServletRequest implements HttpServletRequest
 	@Override
 	public DispatcherType getDispatcherType()
 	{
+		return null;
+	}
+
+	@Override
+	public String getRequestId() {
+		return null;
+	}
+
+	@Override
+	public String getProtocolRequestId() {
+		return null;
+	}
+
+	@Override
+	public ServletConnection getServletConnection() {
 		return null;
 	}
 
