@@ -20,6 +20,7 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 
 import static java.lang.System.currentTimeMillis;
@@ -93,13 +94,24 @@ public class FilesTest
 	@Test
 	public void dontWaitTooMuchIfCantDelete()
 	{
-		java.io.File f = mock(java.io.File.class);
-		when(f.isFile()).thenReturn(true);
-		when(f.delete()).thenReturn(false);
+		java.io.File f = new java.io.File("dummy/path")
+		{
+			@Override
+			public boolean isFile()
+			{
+				return true;
+			}
+
+			@Override
+			public boolean delete()
+			{
+				return false;
+			}
+		};
 		long start = currentTimeMillis();
 		Files.remove(f);
 		long end = currentTimeMillis();
-		assertTrue((end - start) < 5000l);
+		assertTrue((end - start) < 5000L);
 	}
 
 	/**
@@ -222,7 +234,7 @@ public class FilesTest
 	@Test
 	public void fileWithWhitespace() throws Exception
 	{
-		URL url = new URL("file:/file%20with%20whitespace");
+		URL url = URI.create("file:/file%20with%20whitespace").toURL();
 
 		assertEquals(java.io.File.separator + "file with whitespace",
 			Files.getLocalFileFromUrl(url).getPath());
