@@ -18,6 +18,8 @@ package org.apache.wicket.util.io;
 
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+
+import java.net.URI;
 import java.net.URL;
 import java.time.Instant;
 import org.apache.wicket.util.WicketTestTag;
@@ -28,17 +30,17 @@ import org.junit.jupiter.api.Test;
  * Tests for {@link Connections}
  */
 @Tag(WicketTestTag.SLOW)
-public class ConnectionsTest
+class ConnectionsTest
 {
 	/**
 	 * https://issues.apache.org/jira/browse/WICKET-5838
 	 */
 	@Test
-	public void getLastModified() throws Exception
+	void getLastModified() throws Exception
 	{
-		URL url = new URL("http://wicket.apache.org/learn/books/wia.png");
+		URL url = URI.create("https://wicket.apache.org/learn/books/wia.png").toURL();
 		Instant lastModified = Connections.getLastModified(url);
 		assertNotNull(lastModified);
-		assertNotEquals(lastModified.toEpochMilli(), 0L);
+		assertNotEquals(0L, lastModified.toEpochMilli());
 	}
 }
